# Mesh-Slicer

./: CMakeLists.txt  PackageConfig.cmake.in  README.md
cmake/: FindOpenMesh.cmake
data/: old-new.txt  path.txt
src/: MeshDefinition.cpp  MeshDefinition.h  MeshMarker.cpp  MeshMarker.h  MeshSlicer.cpp  MeshSlicer.h  main.cpp
